[package]
name = "dumplock_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onchain_dumplock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

# 🧪 Enable slot-based timing for tests
slot-time = []

default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"